--- a/Desenvolvedor Full-Stack/modulo 1/estilos/style.css
+++ b/Desenvolvedor Full-Stack/modulo 1/estilos/style.css
@@ -1,19 +1,21 @@
-/* Se quisermos que um estilo seja aplicado à página inteira, podemos usar o bodyseletor. */
-
-body {
- background-color: cornSilk;
+/* Para alterar a altura de um elemento, usamos a heightpropriedade  */
+/* Para alterar a largura de um elemento, usamos a widthpropriedade . */
+/* border-radiusFunciona em todos os elementos, até mesmo em imagens. 
+É uma maneira fácil de fazer com que as imagens tenham uma ótima aparência em uma página da web. */
+img {
+    height: 150px;
+    width: 150px;
+    border-radius: 100px;
 }
 
-/* Podemos estilizar quantos elementos quisermos, desde que adicionemos um espaço 
-entre as diferentes regras. */
-
-h1 {
- font-family: Helvetica;
- color: darkGray;
-}
-
-p {
- color: gray;
- font-weight: bold;
- font-family: cursive;
+/* Os elementos de uma página da web podem ter bordas ao redor deles.
+Para ver como fica, adicione a borderpropriedade. */
+/* Para fazer a borda aparecer, definimos o valor como solid. */
+/* Podemos definir a largura de uma borda adicionando um número em pixels logo depois solid */
+/* Para definir a cor, vamos adicionar redno final o valor de border. */
+/* border-radiusé uma propriedade que arredonda os cantos de um elemento. Se definirmos o raio como
+10px, a borda se curva 10pxantes do canto. */
+.title {
+    border: solid 10px red;
+    border-radius: 10px;
 }
